# geosamples-model

./: README.md  Taskfile.yml  model.html  model.ttl  pyproject.toml
.github/workflows/: publish.yaml
scripts/: make_html.py  make_readme.py  reformat_ttl.py
scripts/tests/: test_make_html.py
