[tool.poetry]
name = "geosamples-model"
version = "0.1.1"
description = "A model that describes physical attributes and important relationships of geological samples"
authors = ["Nicholas Car <nick@kurrawong.ai>"]
license = "[Creative Commons BY 4.0](https://creativecommons.org/licenses/by/4.0/)"
readme = "README.md"
packages = [{include = "geospamples_model"}]
repository = "https://github.com/kurrawong/geospamples-model"

[tool.poetry.dependencies]
python = "^3.11"
pylode = "^3.2.0"
pyshacl = "^0.26.0"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
